# Flappy-Bird

./: .gitignore  CMakeLists.txt  README.md  build_runfile.bat
include/Debugging/: DebugBox.hpp
include/Game/: Bird.hpp  Game.hpp  Pipe.hpp
include/Game/Config/: BirdConfig.hpp  PipeConfig.hpp
src/: Bird.cpp  Game.cpp  Pipe.cpp  main.cpp
src/Debugging/: DebugBox.cpp
